--- a/pages/_global.scss
+++ b/pages/_global.scss
@@ -54,6 +54,7 @@ h2
 ul
 {
 	// Liste non ordonnée.
+	padding: 0;
 	list-style-type: none;
 }
 
@@ -167,12 +168,11 @@ header > a, header svg, section:nth-of-type(2) svg
 {
 	// Icônes de la barre de navigation et de la section
 	//	à propos du développeur.
-	margin: 0.25rem;
+	margin: 0.5rem;
 	cursor: pointer;
 	z-index: 1;
 	display: flex;
 	position: relative;
-	font-size: 1.25rem;
 	align-items: center;
 	border-radius: 50%;
 	justify-content: center;
